[workspace]
members = [
    "definition",
    "database",
    "api",
    "services",
    "runtime",
]

[package]
name = "mcep"
version = "0.1.0"
edition = "2021"


[dependencies]
api = { path = "api"}
database = { path = "database" }
runtime = { path = "runtime" }
crossbeam-channel = { version = "0.5.8" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
toml = { version = "0.8.2" }
serde = { version = "1.0.164" }
serde_derive = { version = "1.0.164" }