[package]
name = "mcep"
version = "0.1.0"
edition = "2021"

[dependencies]
typetag = "0.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt"] }
toml = { version = "0.8.2" }
serde = { version = "1.0.164" }
serde_derive = { version = "1.0.164" }
serde_millis = { version = "0.1.1" }
log = { version = "0.4.20" }
log4rs = { version = "1.2.0" }
actix = { version = "0.13.1" }
actix-rt = { version = "2.9.0" }
chrono = { version = "0.4.31", features = ["serde"] }
postgres-types = { version = "0.2.6", features = ["derive", "with-serde_json-1"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "postgres", "migrate"] }
serde_json = { version = "1.0.95", features = ["raw_value"] }
pyo3 = { version = "0.22.2", features = ["auto-initialize"] }
kafka = { version = "0.10.0" }
rdkafka = { version = "0.39.0", features = ["tokio"] }
config = { version = "0.14.0" }
http = { version = "1.0.0" }
ureq = { version = "2.10.1", features = ["json"] }
url = { version = "2.3.1" }
actix-web = { version = "4.9.0" }
clap = { version = "4.5.16", features = ["derive"] }
time = { version = "0.3.47" }

[build-dependencies]
pyo3-build-config = "0.22.2"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dev-dependencies]
test-case = { version = "3.1.0" }
