[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definition at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
definition = { path = "../definition"}
services = { path = "../services"}

rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde_json = "1.0.88"