[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definition at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types"}
services = { path = "../services"}

rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde_json = "1.0.88"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "postgres" ] }
crossbeam-channel = { version = "0.5.8" }
log = { version = "0.4.20" }
log4rs = { version = "1.2.0" }
