[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definition at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "postgres", "migrate" ] }
log = { version = "0.4.20" }
log4rs = { version = "1.2.0" }