[package]
name = "definition"
version = "0.1.0"
edition = "2021"

# See more keys and their definition at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typetag = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
diesel = { version = "2.0.0", features = ["postgres"] }

[dev-dependencies]
test-case = "3.1.0"