[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
definition = { path = "../definition"}
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
kafka = { version = "0.9" }
rayon = { version = "1.7.0" }
crossbeam-channel = { version = "0.5.8" }
toml = { version = "0.7.5" }
serde = { version = "1.0.164" }
serde_derive = { version = "1.0.164" }