[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types"}


tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
kafka = { version = "0.10.0" }
rayon = { version = "1.7.0" }
crossbeam-channel = { version = "0.5.8" }
toml = { version = "0.8.2" }
serde = { version = "1.0.164" }
serde_json = "1.0"
serde_derive = { version = "1.0.164" }
serde_millis = { version = "0.1.1" }
pyo3 = { version = "0.19.2", features = ["auto-initialize"]}
log = { version = "0.4.20" }
log4rs = { version = "1.2.0" }
sqlx = { version = "0.7.2", features = [ "runtime-tokio-native-tls", "postgres", "macros" ] }
actix = { version = "0.13.1" }
chrono = { version = "0.4.31", features = ["serde"]}

[build-dependencies]
pyo3-build-config = "0.19.2"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]