[package]
name = "services"
version = "0.1.0"
edition = "2021"

# See more keys and their definition at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types"}
database = { path = "../database" }
runtime = { path = "../runtime" }

diesel = { version = "2.0.0", features = ["postgres"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde = { version = "1.0", features = ["derive"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
sqlx = { version = "0.7.2", features = [ "runtime-tokio-native-tls", "postgres", "macros" ] }
crossbeam-channel = { version = "0.5.8" }
log = { version = "0.4.20" }
log4rs = { version = "1.2.0" }
postgres-types = {version = "0.1.0", features = ["derive", "with-serde_json-1"]}
actix = { version = "0.13.1" }
actix-rt = { version = "2.9.0" }