[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typetag = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
sqlx = { version = "0.7.2", features = [ "runtime-tokio-native-tls", "postgres", "macros" ] }
log = { version = "0.4.20" }
log4rs = { version = "1.2.0" }
viperus = { version = "0.1.10" }
toml = { version = "0.8.8" }
config = { version = "0.13.4" }

[dev-dependencies]
test-case = "3.1.0"